# brukeropus

./: .gitignore  README.md  example.py  example_list_opus_files_in_dir.py  file.0  pyproject.toml
.github/workflows/: test_package.yml
brukeropus/: __init__.py  param_labels.json
brukeropus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
brukeropus/control/: __init__.py  dde.py  opus.py
brukeropus/file/: __init__.py  block.py  constants.py  data.py  directory.py  file.py  labels.py  params.py  parse.py  parser.py  report.py  utils.py
docs/: brukeropus.html  index.html  search.js
docs/brukeropus/: control.html  file.html
docs/brukeropus/control/: dde.html  opus.html
docs/brukeropus/file/: block.html  constants.html  data.html  directory.html  file.html  labels.html  params.html  parse.html  parser.html  report.html  utils.html
examples/: list_opus_files_in_dir.py  plot_data_and_print_params.py
test/: test.py
tests/: old_test.py  test_brukeropus.py
tests/files/: file.0
